fix: wrong padding alignment. Now everything is working and included

--- a/src/micro-components/Game/Game.module.scss
+++ b/src/micro-components/Game/Game.module.scss
@@ -1,32 +1,38 @@
 .game {
   position: relative;
+  height: calc(100% - 1rem);
 
   &__heading {
-    padding-top: 20%;
-    display: flex;
-    z-index: 10;
+
+    display: block;
     position: relative;
+    padding-top: 20%;
     margin: 0;
-    justify-content: space-between;
-    align-items: center;
 
     &__title {
+      z-index: 10;
+      padding: 0;
+      margin: 0;
+      position: relative;
+      display: block;
       font-family: 'Luckiest Guy', cursive;
       color: white;
       font-size: 1.75rem;
       line-height: 1;
     }
+
+    &__description {
+      color: white;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      z-index: 10;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
-  &__description {
-    color: white;
-    margin: 0;
-    position: relative;
-    z-index: 10;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
 
   &:hover {
     border-color: black !important;
